--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+html,
+body,
+#root,
+.room {
+  height: 100vh;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-size: 2em;
   font-family: 'IBM Plex Sans';
@@ -21,8 +32,7 @@ button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   outline: none;
   transition: transform 0.15s;
-  display: block;
-  margin-left: 48px;
+  margin-left: 10px;
 }
 
 button:hover {
@@ -48,4 +58,21 @@ ul {
   text-align: left;
   margin-left: 48px;
   margin-bottom: 30px;
+}
+
+.room p {
+  margin-bottom: 30px;
+}
+
+.room.lit {
+  background: #fff;
+  color: #333;
+}
+
+.room.unlit {
+  background: #333;
+  color: #fff;
+}
+.room.unlit h1 {
+  color: #fff;
 }
