--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body,
 }
 
 body {
-  font-size: 2em;
+  font-size: 1em;
   font-family: 'IBM Plex Sans';
   text-align: center;
 }
@@ -56,8 +56,10 @@ ul {
   margin: 0;
   padding: 0;
   text-align: left;
-  margin-left: 48px;
-  margin-bottom: 30px;
+  padding: 10px;
+}
+li {
+  margin-bottom: 1.5em;
 }
 
 header {
